Fin page <Les oeuvres>

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -57,7 +57,10 @@
         height: 31.5px;
     }
     .logo-text{
-        font-size: 10px;
+        font-size: 8px;
+    }
+    .br-after-nav{
+        display: none;
     }
 
 }
