--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,12 +3,16 @@
 @import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf");
 
 *{
-    font-family: "OpenSans-Regular";
+    /* font-family: "OpenSans-Regular"; */
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav{
     font-family: "OpenSans-Bold";
     font-weight: bold;
+    position: fixed!important;
+    width: 100%;
+    z-index: 100;
 }
 
 .nav-link{
@@ -34,9 +38,9 @@ nav{
 }
 
 .bar1, .bar2, .bar3 {
-  width: 35px;
+  width: 27px;
   height: 3px;
-  background-color: #333;
+  background-color: black;
   margin: 6px 0;
   transition: 0.4s;
 }
@@ -106,6 +110,7 @@ nav{
 .carousel-desc h5{
   font-size: 13px;
   color: #fff;
+  font-weight: bold;
 }
 
 .filtre{
@@ -128,3 +133,4 @@ nav{
 .footer-social-link a{
   text-decoration: none;
 }
+
