--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
-@import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-Bold.ttf");
+/* @import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-Bold.ttf");
 @import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-SemiBold.ttf");
-@import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf");
+@import url("assets/vendor/fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf"); */
 
 *{
     /* font-family: "OpenSans-Regular"; */
